crates/test-files/fixtures/compile_errors/abi_encode_from_storage.fe
contract Foo:
    my_field: (u256, bool)

    pub fn bar():
        self.my_field.abi_encode()